exports[`with text, editing`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }>
    <input
      autoFocus="true"
      className="edit"
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder=""
      type="text"
      value="example text" />
  </div>
  <a
    onClick={[Function]}
    style={
      Object {
        "background": "#28c",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "textDecoration": "none",
        "top": 0,
      }
    }>
    ?
  </a>
  <div
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }>
    <a
      onClick={[Function]}
      style={
        Object {
          "background": "#28c",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "textDecoration": "none",
          "top": 0,
        }
      }>
      ×
    </a>
    <div
      style={undefined}>
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "color": "#444",
            "fontFamily": "
              -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
              \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
            ",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
          }
        }>
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }>
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }>
            TodoTextInput
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }>
            with text, editing
          </h2>
        </div>
        
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }>
            Story Source
          </h1>
          <pre
            style={
              Object {
                "backgroundColor": "#fafafa",
                "fontFamily": "Menlo, Monaco, \"Courier New\", monospace",
                "fontSize": ".88em",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }>
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                <
                TodoTextInput
              </span>
              <span>
                <span>
                  <span>
                    <br />
                      
                  </span>
                  <span
                    style={Object {}}>
                    text
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span
                        style={
                          Object {
                            "color": "#22a",
                            "wordBreak": "break-word",
                          }
                        }>
                        \"
                        example text
                        \"
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                  <span>
                    <br />
                      
                  </span>
                  <span
                    style={Object {}}>
                    placeholder
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span
                        style={
                          Object {
                            "color": "#22a",
                            "wordBreak": "break-word",
                          }
                        }>
                        \"
                        
                        \"
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                  <span>
                    <br />
                      
                  </span>
                  <span
                    style={Object {}}>
                    editing
                  </span>
                </span>
                <span>
                  <span>
                    <br />
                      
                  </span>
                  <span
                    style={Object {}}>
                    newTodo
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#a11",
                            }
                          }>
                          false
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                  <br />
                </span>
              </span>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                />
              </span>
            </div>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }>
            Prop Types
          </h1>
          <div>
            <h2
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }>
              \"
              TodoTextInput
              \" Component
            </h2>
            <table
              style={
                Object {
                  "borderCollapse": "separate",
                  "borderSpacing": "10px 5px",
                  "marginLeft": -10,
                }
              }>
              <thead>
                <tr>
                  <th>
                    property
                  </th>
                  <th>
                    propType
                  </th>
                  <th>
                    required
                  </th>
                  <th>
                    default
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td>
                    editing
                  </td>
                  <td>
                    other
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    newTodo
                  </td>
                  <td>
                    other
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    onSave
                  </td>
                  <td>
                    other
                  </td>
                  <td>
                    yes
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    placeholder
                  </td>
                  <td>
                    other
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    text
                  </td>
                  <td>
                    other
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`with text, not editing`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }>
    <input
      autoFocus="true"
      className="new-todo"
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder=""
      type="text"
      value="example text" />
  </div>
  <a
    onClick={[Function]}
    style={
      Object {
        "background": "#28c",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "textDecoration": "none",
        "top": 0,
      }
    }>
    ?
  </a>
  <div
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }>
    <a
      onClick={[Function]}
      style={
        Object {
          "background": "#28c",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "textDecoration": "none",
          "top": 0,
        }
      }>
      ×
    </a>
    <div
      style={undefined}>
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "color": "#444",
            "fontFamily": "
              -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
              \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
            ",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
          }
        }>
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }>
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }>
            TodoTextInput
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }>
            with text, not editing
          </h2>
        </div>
        
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }>
            Story Source
          </h1>
          <pre
            style={
              Object {
                "backgroundColor": "#fafafa",
                "fontFamily": "Menlo, Monaco, \"Courier New\", monospace",
                "fontSize": ".88em",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }>
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                <
                TodoTextInput
              </span>
              <span>
                <span>
                  <span>
                    <br />
                      
                  </span>
                  <span
                    style={Object {}}>
                    text
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span
                        style={
                          Object {
                            "color": "#22a",
                            "wordBreak": "break-word",
                          }
                        }>
                        \"
                        example text
                        \"
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                  <span>
                    <br />
                      
                  </span>
                  <span
                    style={Object {}}>
                    placeholder
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span
                        style={
                          Object {
                            "color": "#22a",
                            "wordBreak": "break-word",
                          }
                        }>
                        \"
                        
                        \"
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                  <span>
                    <br />
                      
                  </span>
                  <span
                    style={Object {}}>
                    editing
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#a11",
                            }
                          }>
                          false
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                  <span>
                    <br />
                      
                  </span>
                  <span
                    style={Object {}}>
                    newTodo
                  </span>
                  <br />
                </span>
              </span>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                />
              </span>
            </div>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }>
            Prop Types
          </h1>
          <div>
            <h2
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }>
              \"
              TodoTextInput
              \" Component
            </h2>
            <table
              style={
                Object {
                  "borderCollapse": "separate",
                  "borderSpacing": "10px 5px",
                  "marginLeft": -10,
                }
              }>
              <thead>
                <tr>
                  <th>
                    property
                  </th>
                  <th>
                    propType
                  </th>
                  <th>
                    required
                  </th>
                  <th>
                    default
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td>
                    editing
                  </td>
                  <td>
                    other
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    newTodo
                  </td>
                  <td>
                    other
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    onSave
                  </td>
                  <td>
                    other
                  </td>
                  <td>
                    yes
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    placeholder
                  </td>
                  <td>
                    other
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    text
                  </td>
                  <td>
                    other
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`without text, no placeholder`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }>
    <input
      autoFocus="true"
      className="new-todo"
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder=""
      type="text"
      value="" />
  </div>
  <a
    onClick={[Function]}
    style={
      Object {
        "background": "#28c",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "textDecoration": "none",
        "top": 0,
      }
    }>
    ?
  </a>
  <div
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }>
    <a
      onClick={[Function]}
      style={
        Object {
          "background": "#28c",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "textDecoration": "none",
          "top": 0,
        }
      }>
      ×
    </a>
    <div
      style={undefined}>
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "color": "#444",
            "fontFamily": "
              -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
              \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
            ",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
          }
        }>
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }>
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }>
            TodoTextInput
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }>
            without text, no placeholder
          </h2>
        </div>
        
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }>
            Story Source
          </h1>
          <pre
            style={
              Object {
                "backgroundColor": "#fafafa",
                "fontFamily": "Menlo, Monaco, \"Courier New\", monospace",
                "fontSize": ".88em",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }>
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                <
                TodoTextInput
              </span>
              <span>
                <span>
                  <span>
                    <br />
                      
                  </span>
                  <span
                    style={Object {}}>
                    text
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span
                        style={
                          Object {
                            "color": "#22a",
                            "wordBreak": "break-word",
                          }
                        }>
                        \"
                        
                        \"
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                  <span>
                    <br />
                      
                  </span>
                  <span
                    style={Object {}}>
                    placeholder
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span
                        style={
                          Object {
                            "color": "#22a",
                            "wordBreak": "break-word",
                          }
                        }>
                        \"
                        
                        \"
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                  <span>
                    <br />
                      
                  </span>
                  <span
                    style={Object {}}>
                    editing
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#a11",
                            }
                          }>
                          false
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                  <span>
                    <br />
                      
                  </span>
                  <span
                    style={Object {}}>
                    newTodo
                  </span>
                  <br />
                </span>
              </span>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                />
              </span>
            </div>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }>
            Prop Types
          </h1>
          <div>
            <h2
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }>
              \"
              TodoTextInput
              \" Component
            </h2>
            <table
              style={
                Object {
                  "borderCollapse": "separate",
                  "borderSpacing": "10px 5px",
                  "marginLeft": -10,
                }
              }>
              <thead>
                <tr>
                  <th>
                    property
                  </th>
                  <th>
                    propType
                  </th>
                  <th>
                    required
                  </th>
                  <th>
                    default
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td>
                    editing
                  </td>
                  <td>
                    other
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    newTodo
                  </td>
                  <td>
                    other
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    onSave
                  </td>
                  <td>
                    other
                  </td>
                  <td>
                    yes
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    placeholder
                  </td>
                  <td>
                    other
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    text
                  </td>
                  <td>
                    other
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`without text, with placeholder`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }>
    <input
      autoFocus="true"
      className="new-todo"
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="Enter text here"
      type="text"
      value="" />
  </div>
  <a
    onClick={[Function]}
    style={
      Object {
        "background": "#28c",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "textDecoration": "none",
        "top": 0,
      }
    }>
    ?
  </a>
  <div
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }>
    <a
      onClick={[Function]}
      style={
        Object {
          "background": "#28c",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "textDecoration": "none",
          "top": 0,
        }
      }>
      ×
    </a>
    <div
      style={undefined}>
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "color": "#444",
            "fontFamily": "
              -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
              \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
            ",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
          }
        }>
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }>
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }>
            TodoTextInput
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }>
            without text, with placeholder
          </h2>
        </div>
        
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }>
            Story Source
          </h1>
          <pre
            style={
              Object {
                "backgroundColor": "#fafafa",
                "fontFamily": "Menlo, Monaco, \"Courier New\", monospace",
                "fontSize": ".88em",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }>
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                <
                TodoTextInput
              </span>
              <span>
                <span>
                  <span>
                    <br />
                      
                  </span>
                  <span
                    style={Object {}}>
                    text
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span
                        style={
                          Object {
                            "color": "#22a",
                            "wordBreak": "break-word",
                          }
                        }>
                        \"
                        
                        \"
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                  <span>
                    <br />
                      
                  </span>
                  <span
                    style={Object {}}>
                    placeholder
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span
                        style={
                          Object {
                            "color": "#22a",
                            "wordBreak": "break-word",
                          }
                        }>
                        \"
                        Enter text here
                        \"
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                  <span>
                    <br />
                      
                  </span>
                  <span
                    style={Object {}}>
                    editing
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#a11",
                            }
                          }>
                          false
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                  <span>
                    <br />
                      
                  </span>
                  <span
                    style={Object {}}>
                    newTodo
                  </span>
                  <br />
                </span>
              </span>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                />
              </span>
            </div>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }>
            Prop Types
          </h1>
          <div>
            <h2
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }>
              \"
              TodoTextInput
              \" Component
            </h2>
            <table
              style={
                Object {
                  "borderCollapse": "separate",
                  "borderSpacing": "10px 5px",
                  "marginLeft": -10,
                }
              }>
              <thead>
                <tr>
                  <th>
                    property
                  </th>
                  <th>
                    propType
                  </th>
                  <th>
                    required
                  </th>
                  <th>
                    default
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td>
                    editing
                  </td>
                  <td>
                    other
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    newTodo
                  </td>
                  <td>
                    other
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    onSave
                  </td>
                  <td>
                    other
                  </td>
                  <td>
                    yes
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    placeholder
                  </td>
                  <td>
                    other
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    text
                  </td>
                  <td>
                    other
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
